2011-10-20  Frank Winklmeier  <fwinkl@cern>

	* tagging PyUtils-00-11-04
	* bin/tcSubmitTag.py: Remove deprecation warning
	
	* tagging PyUtils-00-11-03
	* bin/tcSubmitTag.py: Make it an alias for acmd.py tc submit-tag

	* tagging PyUtils-00-11-02
	* M python/scripts/tc_submit_tag.py: Use latest SVN tag if none given; respect order of tags
	  given on the command line; if one tag and multiple releases given submit same tag to all
	* M python/acmdlib.py: Preserve formatting in sub-command description

2011-10-10  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-01
	* obo Joe Tuggle: add an ignore list to diff-poolfile
	* M python/PoolFile.py

2011-09-20  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-00
	* update athfile ref-files for CASTOR->EOS migration
	* added a xrootd/bs test
	* M python/AthFile/tests.py

2011-09-13  Graeme Stewart <graeme.andrew.stewart@cern.ch>

    * tagging PyUtils-00-10-89
    * Modify RootUtils.import_root() to not read command line arguments and set batch
      mode without modifying sys.argv[]

2011-08-05  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-10-88
	* make sure to tag from either trunk or a branch instead of
	  the local directory
	* M bin/avn.py

2011-07-10  Paolo Calafiura  <calaf@localhost6.localdomain6>

	* tagging PyUtils-00-10-87
	* python/PoolFile.py (PoolFileCatalog._pfn): handle atlas_g4 trf case,
	in which input files contain an fid-like string in name (#84085)

2011-06-15  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-86
	* fixes for tc-show-clients and tc-submit-tag
	* M python/scripts/tc_submit_tag.py
	* M python/scripts/tc_show_clients.py
	* M python/AmiLib.py

	* tagging PyUtils-00-10-85
	* update ref-test for TAG
	* M python/AthFile/tests.py

2011-06-14  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-84
	* preliminary work for better support for TAG files
	* M python/AthFile/impl.py
